[gd_scene load_steps=4 format=3 uid="uid://cq76y3fmvckov"]

[ext_resource type="Script" path="res://StartScreen.gd" id="1_cqvll"]

[sub_resource type="LabelSettings" id="LabelSettings_5jkh2"]
font_size = 60

[sub_resource type="LabelSettings" id="LabelSettings_s3v3g"]
font_size = 40

[node name="StartScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_cqvll")

[node name="Dungeon Defense" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 471.0
offset_top = 255.0
offset_right = 609.0
offset_bottom = 278.0
grow_horizontal = 2
grow_vertical = 2
text = "Shape Shoot"
label_settings = SubResource("LabelSettings_5jkh2")

[node name="Start Game" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 492.0
offset_top = 364.0
offset_right = 588.0
offset_bottom = 395.0
grow_horizontal = 2
grow_vertical = 2
text = "Start Game"

[node name="Option" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 490.0
offset_top = 395.0
offset_right = 586.0
offset_bottom = 426.0
grow_horizontal = 2
grow_vertical = 2
text = "Option"

[node name="HighScoreLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 360.0
offset_top = 486.0
offset_right = 564.0
offset_bottom = 541.0
text = "High Score"
label_settings = SubResource("LabelSettings_s3v3g")

[node name="HighWaveLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 362.0
offset_top = 550.0
offset_right = 566.0
offset_bottom = 605.0
text = "Max Wave"
label_settings = SubResource("LabelSettings_s3v3g")

[node name="HighBestTimeLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 362.0
offset_top = 618.0
offset_right = 566.0
offset_bottom = 673.0
text = "Best Time"
label_settings = SubResource("LabelSettings_s3v3g")

[connection signal="pressed" from="Start Game" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="Option" to="." method="_on_option_pressed"]
